<resources>
    <string name="app_name">Epic Filters</string>
    <string name="original_image">original_image</string>
    <string name="filters">Filters</string>
    <string name="bwFilter">bwFilter</string>
    <string name="blurFilter">blurFilter</string>
    <string name="thresholdFilter">thresholdFilter</string>
    <string name="black_white"><![CDATA[Black & White]]></string>
    <string name="blur">Blur</string>
    <string name="threshold">Threshold</string>
    <string name="upload">Upload</string>
    <string name="submit">Submit</string>
    <string name="preview_image">Preview Image</string>
    <string name="go_back">Go Back</string>
    <string name="final_image">Final Image</string>
</resources>