<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="#F1EEEE"
        android:outlineSpotShadowColor="#F1EEEE"
        android:outlineAmbientShadowColor="#F1EEEE"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:targetApi="p">

        <ImageView
            android:id="@+id/imgOriginal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/original_image"
            android:src="@drawable/original"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/filters"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpload" />

    <ImageButton
        android:id="@+id/imgBW"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="5dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/bw"
        android:scaleType="centerCrop"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/bwFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/imgBlur"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="5dp"
        android:layout_marginTop="15dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/blurFilter"
        app:layout_constraintEnd_toStartOf="@+id/imgThreshold"
        android:src="@drawable/blur"
        app:layout_constraintStart_toEndOf="@+id/imgBW"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/imgThreshold"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="5dp"
        android:layout_marginTop="15dp"
        android:scaleType="centerCrop"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/thresholdFilter"
        android:src="@drawable/threshold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/black_white"
        app:layout_constraintEnd_toEndOf="@+id/imgBW"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/imgBW"
        app:layout_constraintTop_toBottomOf="@+id/imgBW" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/blur"
        app:layout_constraintEnd_toEndOf="@+id/imgBlur"
        app:layout_constraintStart_toStartOf="@+id/imgBlur"
        app:layout_constraintTop_toBottomOf="@+id/imgBlur" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/threshold"
        app:layout_constraintEnd_toEndOf="@+id/imgThreshold"
        app:layout_constraintStart_toStartOf="@+id/imgThreshold"
        app:layout_constraintTop_toBottomOf="@+id/imgThreshold" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <!--<com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:singleSelection="true"
        app:selectionRequired="true"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:focusable="true">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/black_white"
            android:textColor="@color/black" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blur"
            android:textColor="@color/black" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/threshold"
            android:textColor="@color/black" />

    </com.google.android.material.chip.ChipGroup>-->

</androidx.constraintlayout.widget.ConstraintLayout>